# musicookie

./: libneardal-dev_0.14.3-1_armhf.deb  libneardal0_0.14.3-1_armhf.deb  libwiringpi2-2.25-1_armhf.deb  neard-explorenfc_1.2-1.debian.tar.xz  neard-explorenfc_1.2-1_armhf.deb
neard-explorenfc-1.2/: .gitignore  .gitmodules  .hgignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  config.h  config.h.in  dbus-gen  go.sh  go.sh.sav  prog
neard-explorenfc-1.2/dbus/: org.neard.xml
neard-explorenfc-1.2/doc/: Doxyfile.in  index.html
neard-explorenfc-1.2/doc/neard-api/: tag-api.txt
neard-explorenfc-1.2/examples/: CMakeCache.txt  CMakeLists.txt  Makefile  basic.c  browser.c  cmake_install.cmake  fi.w1.wpa_supplicant1.xml  wifi-connect-dbus-gen.c  wifi-connect-dbus-gen.h  wifi-connect-wsc-parser.c  wifi-connect-wsc-parser.h  wifi-connect.c
neard-explorenfc-1.2/scripts/: CMakeLists.txt  Makefile  cmake_install.cmake  main.conf  main.conf.in  neard-explorenfc.conf  neard-explorenfc.init  neard-explorenfc.init.in
neard-explorenfc-1.2/src/: CMakeLists.txt  Makefile  adapter.c  adapter.h  cmake_install.cmake  dbus-daemon.c  dbus-daemon.h  dbus-parameters.h  device.c  device.h  generated-code.c  generated-code.h  hal.c  hal.h  hal_device.c  hal_internal.h  hal_tag.c  handover-agent.c  handover-agent.h  main.c  ndef.c  ndef.h  record-container.c  record-container.h  record.c  record.h  tag.c  tag.h
